--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Password Generator</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Random Generator</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_new_password">Generate Password</string>
     <string name="title_activity_saved_passwords">Saved Passwords</string>
